--- a/src/globalStyle/index.scss
+++ b/src/globalStyle/index.scss
@@ -11,6 +11,10 @@ html {
     // font-size: 62.5%;
 }
 
+* {
+  box-sizing: border-box;
+}
+
 body {
     font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
     font-size: 1.6rem;
