--- a/src/globalStyle/index.scss
+++ b/src/globalStyle/index.scss
@@ -61,3 +61,9 @@ button {
     position: fixed;
     width: 200px;
   }
+
+ul.ant-menu.ant-menu-root.ant-menu-inline.ant-menu-light {
+    height: calc(100vh - 100px);
+    overflow-y: auto;
+    overflow-x: hidden;
+}
