--- a/src/globalStyle/index.scss
+++ b/src/globalStyle/index.scss
@@ -90,3 +90,23 @@ ul.ant-menu.ant-menu-root.ant-menu-inline.ant-menu-light {
     overflow-y: auto;
     overflow-x: hidden;
 }
+
+.events {
+    margin: 0;
+    padding: 0;
+    list-style: none;
+}
+.events .ant-badge-status {
+    width: 100%;
+    overflow: hidden;
+    font-size: 12px;
+    white-space: nowrap;
+    text-overflow: ellipsis;
+}
+.notes-month {
+    font-size: 28px;
+    text-align: center;
+}
+.notes-month section {
+    font-size: 28px;
+}
