add shift config

--- a/src/globalStyle/index.scss
+++ b/src/globalStyle/index.scss
@@ -83,6 +83,7 @@ button {
 .ant-layout-sider-children {
     position: fixed;
     width: 200px;
+    overflow: auto;
   }
 
 ul.ant-menu.ant-menu-root.ant-menu-inline.ant-menu-light {
